Adds postgres dep

--- a/tox.ini
+++ b/tox.ini
@@ -2,10 +2,10 @@
 minversion = 1.9
 envlist =
     lint
-    py{37,38,39,py3}-django22-alchemy-mongoengine
-    py{37,38,39,310,py3}-django32-alchemy-mongoengine
-    py{38,39,310,py3}-django40-alchemy-mongoengine
-    py310-djangomain-alchemy-mongoengine
+    py{37,38,39,py3}-django22-alchemy-mongoengine-postgres
+    py{37,38,39,310,py3}-django32-alchemy-mongoengine-postgres
+    py{38,39,310,py3}-django40-alchemy-mongoengine-postgres
+    py310-djangomain-alchemy-mongoengine-postgres
     docs
     examples
     linkcheck
@@ -21,6 +21,7 @@ deps =
     django{22,32,40,main}: Pillow
     alchemy: SQLAlchemy
     mongoengine: mongoengine
+    postgres: psycopg2
 
 whitelist_externals = make
 commands = make test
