--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -18,8 +18,8 @@ jobs:
           - "3.10"
           - "pypy-3.8"
         tox-environment:
-          - django32-alchemy-mongoengine
-          - django40-alchemy-mongoengine
+          - django32-alchemy-mongoengine-postgres
+          - django40-alchemy-mongoengine-postgres
         include:
           - python-version: "3.7"
             tox-environment: django22-alchemy-mongoengine
@@ -34,6 +34,11 @@ jobs:
         image: mongo
         ports:
           - 27017:27017
+
+      postgresdb:
+        image: postgres
+        ports:
+          - 5432:5432
 
     env:
       TOXENV: ${{ matrix.tox-environment }}
