--- a/tox.ini
+++ b/tox.ini
@@ -2,9 +2,13 @@
 minversion = 1.9
 envlist =
     lint
+    py{37,38,39,py3}-django22-alchemy-mongoengine
     py{37,38,39,py3}-django22-alchemy-mongoengine-postgres
+    py{37,38,39,310,py3}-django32-alchemy-mongoengine
     py{37,38,39,310,py3}-django32-alchemy-mongoengine-postgres
+    py{38,39,310,py3}-django40-alchemy-mongoengine
     py{38,39,310,py3}-django40-alchemy-mongoengine-postgres
+    py310-djangomain-alchemy-mongoengine
     py310-djangomain-alchemy-mongoengine-postgres
     docs
     examples
@@ -22,6 +26,10 @@ deps =
     alchemy: SQLAlchemy
     mongoengine: mongoengine
     postgres: psycopg2
+
+setenv =
+    DJANGO_SETTINGS_MODULE=tests.djapp.settings
+    postgres: DJANGO_SETTINGS_MODULE=tests.djapp.settings_pg
 
 whitelist_externals = make
 commands = make test
