--- a/tox.ini
+++ b/tox.ini
@@ -25,7 +25,7 @@ deps =
     django{22,32,40,main}: Pillow
     alchemy: SQLAlchemy
     mongoengine: mongoengine
-    postgres: psycopg2
+    postgres: psycopg2-binary
 
 setenv =
     DJANGO_SETTINGS_MODULE=tests.djapp.settings
