--- a/tox.ini
+++ b/tox.ini
@@ -1,18 +1,18 @@
 [tox]
 minversion = 1.9
 envlist =
-    lint
+    ; lint
     py{37,38,39,py3}-django22-alchemy-mongoengine
     py{37,38,39,py3}-django22-alchemy-mongoengine-postgres
-    py{37,38,39,310,py3}-django32-alchemy-mongoengine
-    py{37,38,39,310,py3}-django32-alchemy-mongoengine-postgres
-    py{38,39,310,py3}-django40-alchemy-mongoengine
-    py{38,39,310,py3}-django40-alchemy-mongoengine-postgres
-    py310-djangomain-alchemy-mongoengine
-    py310-djangomain-alchemy-mongoengine-postgres
-    docs
-    examples
-    linkcheck
+    ; py{37,38,39,310,py3}-django32-alchemy-mongoengine
+    ; py{37,38,39,310,py3}-django32-alchemy-mongoengine-postgres
+    ; py{38,39,310,py3}-django40-alchemy-mongoengine
+    ; py{38,39,310,py3}-django40-alchemy-mongoengine-postgres
+    ; py310-djangomain-alchemy-mongoengine
+    ; py310-djangomain-alchemy-mongoengine-postgres
+    ; docs
+    ; examples
+    ; linkcheck
 
 toxworkdir = {env:TOX_WORKDIR:.tox}
 
