--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -1,33 +1,33 @@
 name: Check
 
-on:
-  - push
-  - pull_request
+# on:
+#   - push
+#   - pull_request
 
-jobs:
-  build:
-    name: ${{ matrix.tox-environment }}
-    runs-on: ubuntu-latest
+# jobs:
+#   build:
+#     name: ${{ matrix.tox-environment }}
+#     runs-on: ubuntu-latest
 
-    strategy:
-      fail-fast: false
-      matrix:
-        tox-environment:
-          - docs
-          - examples
-          - lint
+#     strategy:
+#       fail-fast: false
+#       matrix:
+#         tox-environment:
+#           - docs
+#           - examples
+#           - lint
 
-    env:
-      TOXENV: ${{ matrix.tox-environment }}
+#     env:
+#       TOXENV: ${{ matrix.tox-environment }}
 
-    steps:
-      - uses: actions/checkout@v2
+#     steps:
+#       - uses: actions/checkout@v2
 
-      - name: Set up Python
-        uses: actions/setup-python@v2
+#       - name: Set up Python
+#         uses: actions/setup-python@v2
 
-      - name: Install dependencies
-        run: python -m pip install tox
+#       - name: Install dependencies
+#         run: python -m pip install tox
 
-      - name: Run
-        run: tox
+#       - name: Run
+#         run: tox
