--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -40,7 +40,7 @@ jobs:
         ports:
           - 5432:5432
         env:
-          POSTGRES_PASSWORD:
+          POSTGRES_PASSWORD: password
 
     env:
       TOXENV: ${{ matrix.tox-environment }}
