--- a/setup.cfg
+++ b/setup.cfg
@@ -47,7 +47,7 @@ dev =
     isort
     Pillow
     SQLAlchemy
-    mongoengine<0.24
+    mongoengine
     wheel>=0.32.0
     tox
     zest.releaser[recommended]
