Is this being installed

--- a/tox.ini
+++ b/tox.ini
@@ -22,6 +22,7 @@ deps =
     alchemy: SQLAlchemy
     mongoengine: mongoengine
     postgres: psycopg2-binary
+    postgres-pypy3: psycopg2cffi
 
 setenv =
     DJANGO_SETTINGS_MODULE=tests.djapp.settings
