--- a/tox.ini
+++ b/tox.ini
@@ -22,7 +22,10 @@ deps =
     alchemy: SQLAlchemy
     mongoengine: mongoengine
     postgres: psycopg2-binary
-    pypy3: psycopg2cffi
+
+[testenv:pypy3]
+deps =
+    postgres: psycopg2cffi
 
 setenv =
     DJANGO_SETTINGS_MODULE=tests.djapp.settings
