--- a/tox.ini
+++ b/tox.ini
@@ -30,7 +30,7 @@ setenv =
 whitelist_externals = make
 commands = make test
 
-[testenv:pypy3]
+[testenv:py{py3}]
 deps =
     postgres: psycopg2cffi
 
