--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -18,10 +18,8 @@ jobs:
           - "3.10"
           - "pypy-3.8"
         tox-environment:
-          - django32-alchemy-mongoengine
-          - django32-alchemy-mongoengine-postgres
-          - django40-alchemy-mongoengine
-          - django40-alchemy-mongoengine-postgres
+          - django32-alchemy-mongoengine-{sqlite,postgres}
+          - django40-alchemy-mongoengine-{sqlite,postgres}
         include:
           - python-version: "3.7"
             tox-environment: django22-alchemy-mongoengine
