--- a/tox.ini
+++ b/tox.ini
@@ -2,10 +2,10 @@
 minversion = 1.9
 envlist =
     lint
-    py{37,38,39,py3}-django22-alchemy-mongoengine
-    py{37,38,39,310,py3}-django32-alchemy-mongoengine
-    py{38,39,310,py3}-django40-alchemy-mongoengine
-    py310-djangomain-alchemy-mongoengine
+    py{37,38,39,py3}-django22-alchemy-mongoengine-{sqlite,postgres}
+    py{37,38,39,310,py3}-django32-alchemy-mongoengine-{sqlite,postgres}
+    py{38,39,310,py3}-django40-alchemy-mongoengine-{sqlite,postgres}
+    py310-djangomain-alchemy-mongoengine-{sqlite,postgres}
     docs
     examples
     linkcheck
@@ -22,6 +22,7 @@ deps =
     alchemy: SQLAlchemy
     mongoengine: mongoengine
     postgres: psycopg2-binary
+    py{py3}-postgres: psycopg2cffi
 
 setenv =
     DJANGO_SETTINGS_MODULE=tests.djapp.settings
@@ -29,10 +30,6 @@ setenv =
 
 whitelist_externals = make
 commands = make test
-
-[testenv:py{py3}]
-deps =
-    postgres: psycopg2cffi
 
 [testenv:docs]
 extras = doc
