Another one bites the dust

--- a/tox.ini
+++ b/tox.ini
@@ -21,7 +21,7 @@ deps =
     django{22,32,40,main}: Pillow
     alchemy: SQLAlchemy
     mongoengine: mongoengine
-    postgres: psycopg2-binary
+    py{38,39,310}-postgres: psycopg2-binary
     py{py3}-postgres: psycopg2cffi
 
 setenv =
