--- a/tox.ini
+++ b/tox.ini
@@ -22,7 +22,7 @@ deps =
     alchemy: SQLAlchemy
     mongoengine: mongoengine
     py{38,39,310}-postgres: psycopg2-binary
-    py{py3}-postgres: psycopg2cffi
+    pypy3-postgres: psycopg2cffi
 
 setenv =
     DJANGO_SETTINGS_MODULE=tests.djapp.settings
