--- a/tox.ini
+++ b/tox.ini
@@ -2,10 +2,10 @@
 minversion = 1.9
 envlist =
     lint
-    py{37,38,39,py3}-django22-alchemy-mongoengine-{sqlite,postgres}
-    py{37,38,39,310,py3}-django32-alchemy-mongoengine-{sqlite,postgres}
-    py{38,39,310,py3}-django40-alchemy-mongoengine-{sqlite,postgres}
-    py310-djangomain-alchemy-mongoengine-{sqlite,postgres}
+    py{37,38,39,py3}-django22-{sqlite,postgres}
+    py{37,38,39,310,py3}-django32-{sqlite,postgres}
+    py{38,39,310,py3}-django40-{sqlite,postgres}
+    py310-djangomain-{sqlite,postgres}
     docs
     examples
     linkcheck
@@ -14,15 +14,15 @@ toxworkdir = {env:TOX_WORKDIR:.tox}
 
 [testenv]
 deps =
+    Pillow
+    SQLAlchemy
+    mongoengine
     django22: Django>=2.2,<2.3
     django32: Django>=3.2,<3.3
     django40: Django>=4.0,<4.1
     djangomain: https://github.com/django/django/archive/main.tar.gz
-    django{22,32,40,main}: Pillow
-    alchemy: SQLAlchemy
-    mongoengine: mongoengine
-    py{37,38,39,310}-postgres: psycopg2-binary
-    pypy3-postgres: psycopg2cffi
+    py{37,38,39,310}-django{22,32,40,main}-postgres: psycopg2-binary
+    pypy3-django{22,32,40,main}-postgres: psycopg2cffi
 
 setenv =
     DJANGO_SETTINGS_MODULE=tests.djapp.settings
