--- a/tox.ini
+++ b/tox.ini
@@ -22,7 +22,7 @@ deps =
     django40: Django>=4.0,<4.1
     djangomain: https://github.com/django/django/archive/main.tar.gz
     py{37,38,39,310}-django{22,32,40,main}-postgres: psycopg2-binary
-    pypy3-django{22,32,40,main}-postgres: psycopg2cffi
+    py{py3}-django{22,32,40,main}-postgres: psycopg2cffi
 
 setenv =
     DJANGO_SETTINGS_MODULE=tests.djapp.settings
