--- a/setup.cfg
+++ b/setup.cfg
@@ -37,7 +37,9 @@ classifiers =
 zip_safe = false
 packages = factory
 python_requires = >=3.7
-install_requires = Faker>=0.7.0
+install_requires =
+    packaging
+    Faker>=0.7.0
 
 [options.extras_require]
 dev =
