--- a/tox.ini
+++ b/tox.ini
@@ -1,3 +1,12 @@
+[gh-actions]
+python =
+    3.7: py37
+    3.8: py38
+    3.9: py39
+    3.10: py310
+    pypy-3.7: pypy3
+    pypy-3.8: pypy3
+
 [tox]
 minversion = 1.9
 envlist =
