--- a/tox.ini
+++ b/tox.ini
@@ -2,9 +2,9 @@
 minversion = 1.9
 envlist =
     lint
-    py{37,38,39,py3}-django22-{sqlite,postgres}
-    py{37,38,39,310,py3}-django32-{sqlite,postgres}
-    py{38,39,310,py3}-django40-{sqlite,postgres}
+    py{37,38,39,py37,py38}-django22-{sqlite,postgres}
+    py{37,38,39,310,py37,py38}-django32-{sqlite,postgres}
+    py{38,39,310,py38}-django40-{sqlite,postgres}
     py310-djangomain-{sqlite,postgres}
     docs
     examples
@@ -18,8 +18,8 @@ python =
     3.8: py38
     3.9: py39
     3.10: py310
-    pypy-3.7: pypy3
-    pypy-3.8: pypy3
+    pypy-3.7: pypy37
+    pypy-3.8: pypy38
 
 [testenv]
 deps =
@@ -31,7 +31,7 @@ deps =
     django40: Django>=4.0,<4.1
     djangomain: https://github.com/django/django/archive/main.tar.gz
     py{37,38,39,310}-django{22,32,40,main}-postgres: psycopg2-binary
-    py{py3}-django{22,32,40,main}-postgres: psycopg2cffi
+    py{py37,py38}-django{22,32,40,main}-postgres: psycopg2cffi
 
 setenv =
     DJANGO_SETTINGS_MODULE=tests.djapp.settings
