--- a/tox.ini
+++ b/tox.ini
@@ -34,7 +34,7 @@ deps =
     py{py37,py38}-django{22,32,40,main}-postgres: psycopg2cffi
 
 setenv =
-    DJANGO_SETTINGS_MODULE=tests.djapp.settings
+    py: DJANGO_SETTINGS_MODULE=tests.djapp.settings
     postgres: DJANGO_SETTINGS_MODULE=tests.djapp.settings_pg
 
 whitelist_externals = make
