--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -6,34 +6,31 @@ on:
 
 jobs:
   build:
-    name: Python ${{ matrix.python-version }} / ${{ matrix.tox-environment }}
+    name: Python ${{ matrix.python-version }}
     runs-on: ubuntu-latest
 
     strategy:
       fail-fast: false
       matrix:
         python-version:
+          - "3.7"
           - "3.8"
           - "3.9"
           - "3.10"
+          - "pypy-3.7"
           - "pypy-3.8"
-        tox-environment:
-          - django32-alchemy-mongoengine
-          - django40-alchemy-mongoengine
-        include:
-          - python-version: "3.7"
-            tox-environment: django22-alchemy-mongoengine
-          - python-version: "pypy-3.7"
-            tox-environment: django22-alchemy-mongoengine
-          - python-version: "3.7"
-            tox-environment: django32-alchemy-mongoengine
-          - python-version: "pypy-3.7"
-            tox-environment: django32-alchemy-mongoengine
     services:
       mongodb:
         image: mongo
         ports:
           - 27017:27017
+
+      postgresdb:
+        image: postgres:alpine
+        ports:
+          - 5432:5432
+        env:
+          POSTGRES_PASSWORD: password
 
     env:
       TOXENV: ${{ matrix.tox-environment }}
@@ -47,7 +44,7 @@ jobs:
           python-version: ${{ matrix.python-version }}
 
       - name: Install dependencies
-        run: python -m pip install tox
+        run: python -m pip install tox tox-gh-actions
 
       - name: Run tests
         run: tox
