--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -13,12 +13,21 @@ jobs:
       fail-fast: false
       matrix:
         python-version:
-          - "3.7"
-          - "3.8"
-          - "3.9"
-          - "3.10"
-          - "pypy-3.7"
-          - "pypy-3.8"
+        - '3.7'
+        - '3.8'
+        - '3.9'
+        - '3.10'
+        - "pypy-3.7"
+        - "pypy-3.8"
+        django-version:
+        - '2.2'
+        - '3.2'
+        - '4.0'
+        exclude:
+        - { django-version: '2.2', python-version: '3.9' }
+        - { django-version: '2.2', python-version: '3.10' }
+        - { django-version: '4.0', python-version: '3.7' }
+
     services:
       mongodb:
         image: mongo
@@ -32,13 +41,10 @@ jobs:
         env:
           POSTGRES_PASSWORD: password
 
-    env:
-      TOXENV: ${{ matrix.tox-environment }}
-
     steps:
       - uses: actions/checkout@v2
 
-      - name: Set up Python ${{ matrix.python-version }}
+      - name: Set up Python ${{ matrix.python-version }}, Django ${{ matrix.django-version }}
         uses: actions/setup-python@v2
         with:
           python-version: ${{ matrix.python-version }}
@@ -48,3 +54,5 @@ jobs:
 
       - name: Run tests
         run: tox
+        env:
+          DJANGO: ${{ matrix.django-version }}
