--- a/tox.ini
+++ b/tox.ini
@@ -21,6 +21,12 @@ python =
     pypy-3.7: pypy37
     pypy-3.8: pypy38
 
+[gh-actions:env]
+DJANGO =
+    2.2: django22
+    3.2: django32
+    4.0: django40
+
 [testenv]
 passenv =
     MONGO_HOST
