Adds more speed?? to tests

--- a/tox.ini
+++ b/tox.ini
@@ -26,6 +26,9 @@ DJANGO =
     2.2: django22
     3.2: django32
     4.0: django40
+DATABASE_TYPE =
+    sqlite: sqlite
+    postgres: postgres
 
 [testenv]
 passenv =
