--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -6,7 +6,7 @@ on:
 
 jobs:
   build:
-    name: Python ${{ matrix.python-version }}
+    name: Python ${{ matrix.python-version }}, Django ${{ matrix.django-version }}, Database ${{ matrix.database-type }}
     runs-on: ubuntu-latest
 
     strategy:
@@ -23,9 +23,13 @@ jobs:
         - '2.2'
         - '3.2'
         - '4.0'
+        database-type:
+        - 'sqlite'
+        - 'postgres'
         exclude:
         - { django-version: '2.2', python-version: '3.9' }
         - { django-version: '2.2', python-version: '3.10' }
+        - { django-version: '4.0', python-version: 'pypy-3.7' }
         - { django-version: '4.0', python-version: '3.7' }
 
     services:
@@ -44,7 +48,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
-      - name: Set up Python ${{ matrix.python-version }}, Django ${{ matrix.django-version }}
+      - name: Set up python
         uses: actions/setup-python@v2
         with:
           python-version: ${{ matrix.python-version }}
@@ -56,3 +60,4 @@ jobs:
         run: tox
         env:
           DJANGO: ${{ matrix.django-version }}
+          DATABASE_TYPE: ${{ matrix.database-type }}
