--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,7 +26,7 @@ services:
       DEBIAN_FRONTEND=noninteractive apt install -y build-essential &&
       cp -r factory_boy factory_boy_$$PYENV_NAME &&
       cd factory_boy_$$PYENV_NAME &&
-      pip install -U pip tox-factor &&
+      pip install -U pip tox-factor flake8 isort check-manifest &&
       MONGO_HOST=mongo POSTGRES_HOST=postgres POSTGRES_DATABASE=factory_boy_$$PYENV_NAME tox --workdir /tmp/.tox -f $$PYENV_NAME
       '
 
