--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -23,6 +23,7 @@ jobs:
         - '2.2'
         - '3.2'
         - '4.0'
+        - 'main'
         database-type:
         - 'sqlite'
         - 'postgres'
@@ -31,6 +32,8 @@ jobs:
         - { django-version: '2.2', python-version: '3.10' }
         - { django-version: '4.0', python-version: 'pypy-3.7' }
         - { django-version: '4.0', python-version: '3.7' }
+        - { django-version: 'main', python-version: 'pypy-3.7' }
+        - { django-version: 'main', python-version: '3.7' }
 
     services:
       mongodb:
