--- a/tox.ini
+++ b/tox.ini
@@ -26,6 +26,7 @@ DJANGO =
     2.2: django22
     3.2: django32
     4.0: django40
+    main: djangomain
 DATABASE_TYPE =
     sqlite: sqlite
     postgres: postgres
