--- a/tox.ini
+++ b/tox.ini
@@ -44,8 +44,8 @@ deps =
     django32: Django>=3.2,<3.3
     django40: Django>=4.0,<4.1
     djangomain: https://github.com/django/django/archive/main.tar.gz
-    py{37,38,39,310}-django{22,32,40,main}-postgres: psycopg2-binary
-    py{py37,py38}-django{22,32,40,main}-postgres: psycopg2cffi
+    py{37,38,39,310}-postgres: psycopg2-binary
+    py{py37,py38}-postgres: psycopg2cffi
 
 setenv =
     py: DJANGO_SETTINGS_MODULE=tests.djapp.settings
