Speed up the local env

--- a/tox.ini
+++ b/tox.ini
@@ -10,7 +10,7 @@ envlist =
     examples
     linkcheck
 
-toxworkdir = {env:TOX_WORKDIR:.tox}
+toxworkdir = {env:TOX_WORK_DIR:.tox}
 
 [gh-actions]
 python =
