--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,8 @@
 version: "3.8"
 
+volumes:
+  pip_cache:
+
 services:
 
   mongo:
@@ -15,6 +18,7 @@ services:
     image: python:3.7
     volumes:
       - .:/factory_boy
+      - pip_cache:/root/.cache/pip
     depends_on:
       - mongo
       - postgres
