--- a/tox.ini
+++ b/tox.ini
@@ -11,7 +11,7 @@ envlist =
     py{38,39,310,py38}-django40-mongo-alchemy-{sqlite,postgres}
     py310-djangomain-mongo-alchemy-{sqlite,postgres}
 
-toxworkdir = {env:TOX_WORK_DIR:.tox}
+toxworkdir = {env:TOX_WORKDIR:.tox}
 
 [gh-actions]
 python =
