--- a/setup.cfg
+++ b/setup.cfg
@@ -80,3 +80,8 @@ include_trailing_comma = True
 force_grid_wrap = 0
 use_parentheses = True
 line_length = 88
+
+[check-manifest]
+ignore =
+    docker-compose.yml
+    Dockerfile.template
