--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,7 +13,6 @@ services:
     image: postgres:alpine
     environment:
       - POSTGRES_PASSWORD=password
-      - POSTGRES_DB=alch_factory_boy_test
 
   py37: &pyenv
     build:
@@ -29,14 +28,7 @@ services:
       - postgres
     environment:
       - PYENV_NAME=py37
-    command: >
-      bash -c '
-      export MONGO_HOST=mongo &&
-      export POSTGRES_HOST=postgres &&
-      cp -r factory_boy factory_boy_$$PYENV_NAME &&
-      cd factory_boy_$$PYENV_NAME &&
-      TOX_WORK_DIR=/tmp/.tox tox -f $$PYENV_NAME
-      '
+    command: bash -c 'POSTGRES_DATABASE=factory_boy_test_$$PYENV_NAME tox -f $$PYENV_NAME'
 
   py38:
     <<: *pyenv
